Some Java 15 updates